--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "drizzle-kit push:pg",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.46",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.4",
     "@sentry/nextjs": "^7.112.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
@@ -22,12 +23,15 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.29.4",
     "lucide-react": "^0.376.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "posthog-js": "^1.130.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-redux": "^9.1.2",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -42,7 +46,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -55,6 +59,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.30.2"
-  },
-  "packageManager": "pnpm@8.15.5"
+  }
 }
