--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posthog-js": "^1.130.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-crop": "^11.0.5",
     "react-intersection-observer": "^9.10.2",
     "react-redux": "^9.1.2",
     "server-only": "^0.0.1",
