--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "t3-gallery",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "5.0.0-beta.46",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@reduxjs/toolkit": "^2.2.4",
-    "@sentry/nextjs": "^7.112.2",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@uploadthing/react": "^6.4.4",
-    "@vercel/postgres": "^0.8.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.29.4",
-    "lucide-react": "^0.376.0",
-    "nanoid": "^5.0.7",
-    "next": "^14.2.1",
-    "next-themes": "^0.3.0",
-    "postgres": "^3.4.3",
-    "posthog-js": "^1.130.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-image-crop": "^11.0.5",
-    "react-intersection-observer": "^9.10.2",
-    "react-redux": "^9.1.2",
-    "server-only": "^0.0.1",
-    "sharp": "^0.33.4",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.9.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.21.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.11.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.30.2"
-  }
+    "name": "t3-gallery",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "next build",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio",
+        "dev": "next dev",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@auth/drizzle-adapter": "^1.1.0",
+        "@clerk/nextjs": "5.0.0-beta.46",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@reduxjs/toolkit": "^2.2.4",
+        "@sentry/nextjs": "^7.112.2",
+        "@t3-oss/env-nextjs": "^0.9.2",
+        "@uploadthing/react": "^6.4.4",
+        "@vercel/postgres": "^0.8.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "drizzle-orm": "^0.29.5",
+        "lucide-react": "^0.376.0",
+        "nanoid": "^5.0.7",
+        "next": "^14.2.1",
+        "next-auth": "5.0.0-beta.18",
+        "next-themes": "^0.3.0",
+        "postgres": "^3.4.3",
+        "posthog-js": "^1.130.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-image-crop": "^11.0.5",
+        "react-intersection-observer": "^9.10.2",
+        "react-redux": "^9.1.2",
+        "server-only": "^0.0.1",
+        "sharp": "^0.33.4",
+        "sonner": "^1.4.41",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uploadthing": "^6.9.0",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@types/eslint": "^8.56.2",
+        "@types/node": "^20.11.20",
+        "@types/react": "^18.2.57",
+        "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^7.1.1",
+        "@typescript-eslint/parser": "^7.1.1",
+        "drizzle-kit": "^0.21.1",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.1.3",
+        "eslint-plugin-drizzle": "^0.2.3",
+        "pg": "^8.11.3",
+        "postcss": "^8.4.34",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.4.2"
+    },
+    "ct3aMetadata": {
+        "initVersion": "7.30.2"
+    }
 }
