--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     },
     "dependencies": {
         "@auth/drizzle-adapter": "^1.1.0",
-        "@clerk/nextjs": "5.0.0-beta.46",
+        "@hookform/resolvers": "^3.4.2",
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@reduxjs/toolkit": "^2.2.4",
         "@sentry/nextjs": "^7.112.2",
         "@t3-oss/env-nextjs": "^0.9.2",
         "@uploadthing/react": "^6.4.4",
         "@vercel/postgres": "^0.8.0",
+        "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "drizzle-orm": "^0.29.5",
@@ -32,6 +36,7 @@
         "posthog-js": "^1.130.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.51.5",
         "react-image-crop": "^11.0.5",
         "react-intersection-observer": "^9.10.2",
         "react-redux": "^9.1.2",
@@ -44,6 +49,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/eslint": "^8.56.2",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
